--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Krishnas Blog
 author: Krishna Duvvuri
-email: your-email@domain.com
+email: krishna.c.duvvuri@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   A blog where I talk about things I am learning about. 
   Topics include: AI, Data Science, Graph Databases, Cooking, and Rocket League.
