--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Krishnas Blog
+title: Krishna's Blog
 author: Krishna Duvvuri
 email: krishna.c.duvvuri@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A blog where I talk about things I am learning about. 
+  A blog where I talk about things I am learning about and building. 
   Topics include: AI, Data Science, Graph Databases, Cooking, and Rocket League.
 
 # social links
