--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Krishna's Blog
+title: Krishna's Website
 author: Krishna Duvvuri
 email: krishna.c.duvvuri@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  A blog where I talk about things I am learning about and building. 
+  My portfolio where I showcase the things I am learning about and building. 
   Topics include: AI, blockchain development, data analytics, graphs, cooking, and gaming.
 
 # social links
