--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,4 @@ github_username:  KrishnaCD93 # DO NOT include the @ character, or else the buil
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 theme: minima
+google_analytics: UA-199338542-2
