--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,7 @@ twitter_username: duvvuri_krishna # DO NOT include the @ character, or else the 
 github_username:  KrishnaCD93 # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
-theme: minima
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 google_analytics: UA-199338542-2
