--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Krishna's Website
 author: Krishna Duvvuri
 email: krishna.c.duvvuri@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  My portfolio where I showcase the things I am learning about and building. 
+  My portfolio where I showcase my projects. I also write about meta changes in our society.
   Topics include: AI, blockchain development, data analytics, graphs, cooking, and gaming.
 
 # social links
